--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-fastavro==0.21.10
+fastavro==0.21.14
+python-json-logger==0.1.10
+
+-e git+https://github.com/uc-cdis/gdcdatamodel.git@1.3.4#egg=gdcdatamodel
+-e git+https://git@github.com/NCI-GDC/psqlgraph.git@1.2.0#egg=psqlgraph
+-e git+https://git@github.com/NCI-GDC/cdisutils.git@1.2.0#egg=cdisutils
+-e git+https://git@github.com/uc-cdis/dictionaryutils.git@2.0.2#egg=dictionaryutils
