--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+env/
 build/
 develop-eggs/
 dist/
@@ -23,7 +24,6 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -54,7 +54,6 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
 
 # Flask stuff:
 instance/
@@ -78,13 +77,11 @@ target/
 # celery beat schedule file
 celerybeat-schedule
 
-# SageMath parsed files
-*.sage.py
-
 # Environments
 .env
 .venv
 env/
+_venv/
 venv/
 ENV/
 env.bak/
@@ -97,20 +94,7 @@ venv.bak/
 # Rope project settings
 .ropeproject
 
-# mkdocs documentation
-/site
+# PyCharm
+.idea/
 
-# mypy
-.mypy_cache/
-
-# pfb files
-*.pfb
-
-# JSON files
-*.json
-
-# jupyter notebooks
-*.ipynb
-
-# avro files
-*.avro
+*.DS_Store
