--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,20 @@ dist: xenial
 language: python
 python:
 - 2.7
+- 3.5
+- 3.6
+- 3.7
+matrix:
+  allow_failures:
+    - python: "3.5"
+    - python: "3.6"
+    - python: "3.7"
 cache:
 - pip
 - apt
 install:
 - pip install pipenv
-- pipenv install --dev --deploy
+- pipenv install --dev --skip-lock --python `which python`
 - pipenv graph
 script:
 - pipenv run py.test -vv --cov=pypfb --cov-report xml tests
@@ -28,4 +36,7 @@ deploy:
     repo: uc-cdis/pypfb
     tags: true
 after_deploy:
-- gen3git release
+- pipenv run gen3git release
+env:
+  global:
+  - PIPENV_IGNORE_VIRTUALENVS=1
