Revert "chore(release): Poetry release"

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,9 @@ script:
 - poetry run python th_wrapper.py -w truffles.json -c thog_config.json -g file:///${PWD}/ --check
 after_script:
 - poetry run python-codacy-coverage -r coverage.xml
+before_deploy:
+- sed -i.bak "s/=get_version()/='$TRAVIS_TAG'/g" setup.py
+- cat setup.py
 deploy:
   provider: pypi
   user: uc-ctds
