--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true	
 
 [dev-packages]	
+click = "~=7.1.2"
 codacy-coverage = "*"	
 pytest = "~=3.2"	
 pytest-cov = "~=2.5"	
