--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,19 @@
 [tool.poetry]
-name = "pfb"
-version = "0.1.0"
-description = ""
+name = "pypfb"
+version = "0.4.5"
+description = "Python SDK for PFB format"
 authors = ["CTDS UChicago <cdis@uchicago.edu>"]
 license = "Apache-2.0"
 
 [tool.poetry.dependencies]
 python = "^3.6"
+click = "^7.1.2"
+fastavro = "^1.0.0"
+python-json-logger = "^0.1.11"
+PyYAML = "^5.3.1"
+importlib_metadata = { version = "^1.3.0", python = "<3.8" }
+dictionaryutils = "<=3.0.2"
+gdcdictionary = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 codacy-coverage = "*"
@@ -14,19 +21,9 @@ pytest = "~=3.2"
 pytest-cov = "~=2.5"
 truffleHog = "*"
 gen3git = "*"
-more-itertools = "~=5.0"
-click = "~=7.0"
-fastavro = ">=0.21"
-python-json-logger = "~=0.1"
-PyYAML = "~=5.1"
-dictionaryutils = "<=3.0.2"
-gdcdictionary = ">=1.2.0"
 
-
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+[tool.poetry.scripts]
+pfb = 'pfb.cli:main'
 
 [tool.poetry.plugins."pfb.plugins"]
 "from_gen3dict" = "pfb.importers.gen3dict"
@@ -35,3 +32,7 @@ build-backend = "poetry.masonry.api"
 "show" = "pfb.commands.show"
 "add" = "pfb.commands.add"
 "rename" = "pfb.commands.rename"
+
+[build-system]
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
