--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.4.5"
 description = "Python SDK for PFB format"
 authors = ["CTDS UChicago <cdis@uchicago.edu>"]
 license = "Apache-2.0"
+packages = [
+    { include = "pfb", from = "src" },
+]
 
 [tool.poetry.dependencies]
 python = "^3.6"
