--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,11 +31,12 @@ pfb = 'pfb.cli:main'
 [tool.poetry.plugins."pfb.plugins"]
 "from_gen3dict" = "pfb.importers.gen3dict"
 "from_json" = "pfb.importers.json"
+"from_tsv" = "pfb.importers.tsv"
 "to_gremlin" = "pfb.exporters.gremlin"
+"to_tsv" = "pfb.exporters.tsv"
 "show" = "pfb.commands.show"
 "add" = "pfb.commands.add"
 "rename" = "pfb.commands.rename"
-"to_tsv" = "pfb.exporters.tsv"
 
 [build-system]
 requires = ["poetry>=0.12"]
