--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pypfb"
-version = "0.5.0"
+version = "0.5.1"
 description = "Python SDK for PFB format"
 authors = ["CTDS UChicago <cdis@uchicago.edu>"]
 license = "Apache-2.0"
@@ -9,7 +9,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.6.1"
 click = "^7.1.2"
 fastavro = "^1.0.0"
 python-json-logger = "^0.1.11"
@@ -17,6 +17,7 @@ PyYAML = "^5.3.1"
 importlib_metadata = { version = "^1.3.0", python = "<3.8" }
 dictionaryutils = "<=3.0.2"
 gdcdictionary = "^1.2.0"
+pandas = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 codacy-coverage = "*"
