--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,15 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6.1"
+python = ">=3.6.1,<3.7"
 click = "^7.1.2"
 fastavro = "^1.0.0"
 python-json-logger = "^0.1.11"
 PyYAML = "^5.3.1"
 importlib_metadata = { version = "^1.3.0", python = "<3.8" }
-dictionaryutils = "<=3.0.2"
 gdcdictionary = "^1.2.0"
 pandas = "^1.1.0"
+dictionaryutils = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
 codacy-coverage = "*"
