--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ importlib_metadata = { version = "^1.3.0", python = "<3.8" }
 dictionaryutils = "<=3.0.2"
 gdcdictionary = "^1.2.0"
 pandas = "^1.1.0"
+aiohttp = "^3.6.3"
 
 [tool.poetry.dev-dependencies]
 codacy-coverage = "*"
