--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ pfb = 'pfb.cli:main'
 "add" = "pfb.commands.add"
 "rename" = "pfb.commands.rename"
 "import" = "pfb.commands.import"
+"etl" = "pfb.commands.etl"
 
 [build-system]
 requires = ["poetry>=0.12"]
