--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,13 +31,13 @@ jobs:
         run: |
           pip install wheel
           python --version
-          pip install --user --editable git+https://github.com/uc-cdis/release-helper.git@fix/logging_GITHUB_REMOTE#egg=gen3git
+          pip install --user --editable git+https://github.com/uc-cdis/release-helper.git@master#egg=gen3git
           python -m gen3git --github-access-token ${{ secrets.GEN3_GITHUB_TOKEN }} tag ${{ steps.bump_version.outputs.next-version }}
           python -m gen3git --github-access-token ${{ secrets.GEN3_GITHUB_TOKEN }} --from-tag ${{ steps.previoustag.outputs.tag }} release
           python -m gen3git --github-access-token ${{ secrets.GEN3_GITHUB_TOKEN }} --from-tag ${{ steps.previoustag.outputs.tag }} gen --markdown
           cat release_notes.md
       - name: Create release
-        uses: ncipollo/release-action@v1
+        uses: ncipollo/release-action@v2.3.4
         with:
           tag: ${{ steps.bump_version.outputs.next-version }}
           artifacts: "release.tar.gz,foo/*.txt"
