specify a docker img with py3

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,6 +30,7 @@ jobs:
       - name: "Upgrade to Python3"
         uses: cclauss/Upgrade-to-Python3@master
       - name: Install Gen3 release-helper
+        uses: frolvlad/alpine-python3@latest
         run: |
           pip install wheel
           python --version
