--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ gdcdictionary = "^1.2.0"
 pandas = "^1.1.0"
 aiohttp = "^3.6.3"
 dictionaryutils = "^3.2.0"
-gen3 = "<4.0.0"
+gen3 = "^4.0.0"
 
 [tool.poetry.dev-dependencies]
 codacy-coverage = "*"
