--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.6,<=3.8"
 click = "^7.1.2"
-fastavro = ">=1.4.1"
+fastavro = "<=1.4.1"
 python-json-logger = "^0.1.11"
 PyYAML = "^5.3.1"
 importlib_metadata = { version = "^1.3.0", python = "<=3.8" }
