--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,13 @@ python:
 - '3.7'
 - '3.8'
 - '3.9'
+- '3.10'
+jobs:
+  allow_failures:
+  - python: '3.6'
+  - python: '3.7'
+  - python: '3.8'
+  - python: '3.10'
 cache:
 - pip
 - apt
