gitignore adds for jekyll

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,11 @@ venv.bak/
 
 *.DS_Store
 Pipfile.lock
+
+# Jekyll
+docs/about/_site/
+docs/about/.sass-cache/
+docs/about/.jekyll-cache/
+docs/about/.jekyll-metadata
+docs/about/.bundle/
+docs/about/vendor/
