--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ cache:
 - pip
 - apt
 before_install:
-- curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
+- pip install poetry
 - source $HOME/.poetry/env
 - which poetry
 - poetry --version
