--- a/doc/Gemfile
+++ b/doc/Gemfile
@@ -34,4 +34,4 @@ gem "wdm", "~> 0.1.0", :install_if => Gem.win_platform?
 
 #gem "github-pages", "~> 392", group: :jekyll_plugins
 
-gem "github-pages", "202"
+gem "github-pages", group: :jekyll_plugins
