--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.10"
+python = "^3.9"
 click = "^7.1.2"
 fastavro = "~1.8.2"
 python-json-logger = "^0.1.11"
@@ -17,7 +17,7 @@ PyYAML = "^5.3.1"
 importlib_metadata = { version = "^1.3.0", python = "<=3.9" }
 gdcdictionary = "^1.2.0"
 aiohttp = "^3.6.3"
-dictionaryutils = "^3.4.3"
+dictionaryutils = { git="https://github.com/uc-cdis/dictionaryutils", branch = "fix/update-python-version" }
 gen3 = "^4.11.3"
 
 [tool.poetry.dev-dependencies]
