--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ click = "^7.1.2"
 fastavro = "~1.8.2"
 python-json-logger = "^0.1.11"
 PyYAML = "^5.3.1"
-importlib_metadata = { version = "^1.3.0", python = "<=3.9" }
+importlib_metadata = { version = ">=3.6.0", python = "<=3.9" }
 gdcdictionary = "^1.2.0"
 aiohttp = "^3.6.3"
 dictionaryutils = { git="https://github.com/uc-cdis/dictionaryutils", branch = "fix/update-python-version" }
