--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,11 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
-click = "^7.1.2"
+click = "^8.0"
 fastavro = "~1.8.2"
 python-json-logger = "^0.1.11"
 PyYAML = "^5.3.1"
-importlib_metadata = { version = ">=3.6.0", python = "<=3.9" }
+importlib_metadata = { version = ">=3.6.0, <4.0", python = "<=3.9" }
 gdcdictionary = "^1.2.0"
 aiohttp = "^3.6.3"
 dictionaryutils = { git="https://github.com/uc-cdis/dictionaryutils", branch = "fix/update-python-version" }
