--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9, <4"
 click = "^7.1.2"
 fastavro = "~1.8.2"
 python-json-logger = "^0.1.11"
