--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ PyYAML = "^5.3.1"
 importlib_metadata = { version = ">=3.6.0, <4.0", python = "<=3.9" }
 gdcdictionary = "^1.2.0"
 aiohttp = "^3.6.3"
-dictionaryutils = { git="https://github.com/uc-cdis/dictionaryutils", branch = "fix/update-python-version" }
+dictionaryutils = { git="https://github.com/uc-cdis/dictionaryutils", tag="3.4.10" }
 gen3 = "^4.11.3"
 
 [tool.poetry.dev-dependencies]
