--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pypfb"
-version = "0.5.27"
+version = "0.5.28"
 description = "Python SDK for PFB format"
 authors = ["CTDS UChicago <cdis@uchicago.edu>"]
 license = "Apache-2.0"
@@ -14,7 +14,7 @@ click = "^7.1.2"
 fastavro = "~1.8.2"
 python-json-logger = "^0.1.11"
 PyYAML = "^6.0.1"
-importlib_metadata = { version = "^1.3.0", python = "<=3.9" }
+importlib_metadata = { version = ">=3.6.0", python = "<=3.9" }
 gen3dictionary = ">=2.0.3"
 aiohttp = "^3.6.3"
 dictionaryutils = "^3.4.8"
