--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pypfb"
-version = "0.5.27"
+version = "0.6.0"
 description = "Python SDK for PFB format"
 authors = ["CTDS UChicago <cdis@uchicago.edu>"]
 license = "Apache-2.0"
@@ -12,19 +12,19 @@ packages = [
 python = ">=3.9, <4"
 click = "^7.1.2"
 fastavro = "~1.8.2"
+
+# not imported but required
 python-json-logger = "^0.1.11"
-PyYAML = "^6.0.1"
+
 importlib_metadata = { version = "^1.3.0", python = "<=3.9" }
-gen3dictionary = ">=2.0.3"
 aiohttp = "^3.6.3"
-dictionaryutils = "^3.4.8"
+dictionaryutils = { git = "https://github.com/uc-cdis/dictionaryutils.git", branch = "chore/deps" }
 gen3 = "^4.11.3"
 
 [tool.poetry.dev-dependencies]
 codacy-coverage = "*"
 pytest = "~=6.2.5"
 pytest-cov = "~=2.5"
-truffleHog = "*"
 gen3git = "*"
 
 [tool.poetry.scripts]
