--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ fastavro = "~1.8.2"
 # not imported but required
 python-json-logger = "^0.1.11"
 
-importlib_metadata = { version = "^1.3.0", python = "<=3.9" }
+importlib_metadata = "*"
 aiohttp = "^3.6.3"
 dictionaryutils = { git = "https://github.com/uc-cdis/dictionaryutils.git", branch = "chore/deps" }
 gen3 = "^4.11.3"
