--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.9, <4"
-click = "^7.1.2"
+click = "*"
 fastavro = "~1.8.2"
 
 # not imported but required
