--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ packages = [
 python = ">=3.9, <4"
 click = "^8.1.7"
 fastavro = "~1.8.2"
+python-json-logger = ">=2.0.0"
 PyYAML = "^6.0.1"
 importlib_metadata = { version = ">=3.6.0", python = "<=3.9" }
 gen3dictionary = ">=2.0.3"
