Temporarily disable TestPypi publication

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,7 +10,7 @@ jobs:
     uses: uc-cdis/.github/.github/workflows/python_package_index_publish.yaml@master
     with:
         PYTHON_VERSION: '3.9'
-        DO_TEST_PUBLISH_FIRST: true
+        DO_TEST_PUBLISH_FIRST: false # temporarily blocked https://cdis.slack.com/archives/C02SH3UB2T0/p1749076310304519
     secrets:
       PYPI_TEST_API_TOKEN: ${{ secrets.PYPI_TEST_API_TOKEN }}
       PYPI_PROD_API_TOKEN: ${{ secrets.PYPI_PROD_API_TOKEN }}
